# nix-data-generator

./: Cargo.toml  flake.nix
src/: main.rs
