[package]
name = "nix-data-generator"
version = "0.0.3"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }

reqwest = { version = "0.11", features = ["blocking", "brotli"] }
anyhow = "1.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

log = "0.4"
pretty_env_logger = "0.5"

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
csv = "1.2"
